--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Zihong Cheng"
   pronouns         : # example: "she/her"  
   bio              : "Research on dark matter"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Guangdong province"
+#  employer         : "Red Brick University"
   uri              : # URL
   email            : "none@example.org" 
 
