--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ author:
   bio              : "Research on dark matter"
   location         : "Guangdong province"
 #  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+#  uri              : # URL
+  email            : "chengzh@m.scnu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
