--- a/_config.yml
+++ b/_config.yml
@@ -242,14 +242,14 @@ defaults:
   # _pages
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
   # _teaching
   - scope:
       path: ""
-      type: posts
+      type: teaching
     values:
       layout: single
       author_profile: true
@@ -258,7 +258,7 @@ defaults:
   # _publications
   - scope:
       path: ""
-      type: posts
+      type: publications
     values:
       layout: single
       author_profile: true
@@ -267,7 +267,7 @@ defaults:
   # _portfolio
   - scope:
       path: ""
-      type: posts
+      type: portfolio
     values:
       layout: single
       author_profile: true
@@ -276,7 +276,7 @@ defaults:
   # _talks
   - scope:
       path: ""
-      type: posts
+      type: talks
     values:
       layout: talk
       author_profile: true
