--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile1.png"
   name             : "Zihong Cheng"
   pronouns         : # example: "she/her"  
-  bio              : "Research on dark matter"
+  bio              : "a boring man"
   location         : "Guangdong province"
 #  employer         : "Red Brick University"
 #  uri              : # URL
