--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,10 +6,10 @@
 
 main:
   - title: "notes"
-    url: /publications/
+    url: /notes/
 
   - title: "codes"
-    url: /talks/    
+    url: /codes/    
 
 #  - title: "Teaching"
 #    url: /teaching/    
