--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: /notes/
 
   - title: "codes"
-    url: /markdown/ 
+    url: /codes/ 
 
 #  - title: "Teaching"
 #    url: /teaching/    
