--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,9 +5,9 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "notes"
-    url: /notes/
- 
+  - title: "Blog Posts"
+    url: /year-archive/
+    
   - title: "codes"
     url: /codes/ 
 
@@ -17,8 +17,8 @@ main:
 #  - title: "Portfolio"
 #    url: /portfolio/
         
-#  - title: "Blog Posts"
-#    url: /year-archive/
+#  - title: "notes"
+#    url: /notes/
     
   - title: "CV"
     url: /cv/
