--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "ZhongC01/ZhongC01.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile1.png"
+  avatar           : "wallhaven-nm9l89.jpg"
   name             : "Zihong Cheng"
   pronouns         : # example: "she/her"  
   bio              : "Take a sad song and make it better." 
