--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "A personal website"
+title                    : "Home Page"
 title_separator          : "-"
 name                     : &name "Zihong Cheng"
 description              : &description "personal description"
